<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:gravity="center">

			<ImageView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:src="@drawable/icon"
				android:id="@+id/startactivityImageView"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="75dp"
				android:gravity="center">

				<android.support.v7.widget.AppCompatTextView
					android:layout_height="wrap_content"
					android:text="@string/app_version"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

	<android.support.v7.widget.AppCompatTextView
		android:layout_height="wrap_content"
		android:text="@string/copyright_mcal"
		android:layout_width="wrap_content"/>

	<android.support.v7.widget.AppCompatTextView
		android:layout_height="wrap_content"
		android:text="@string/copyright_icpedev"
		android:layout_width="wrap_content"/>

</LinearLayout>

